fix: z-index

--- a/app/components/BurgerMenu/BurgerMenu.module.scss
+++ b/app/components/BurgerMenu/BurgerMenu.module.scss
@@ -2,4 +2,10 @@
     cursor: pointer;
     height: 100%;
     position: relative;
+    z-index: 10;
+}
+
+.menu {
+    position: relative;
+    z-index: 10;
 }
